examples/test/testpolicy18149.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18149
  namespace: namespace381
spec:
  podSelector:
    matchLabels:
      key41: value29
      key19: value15
      key16: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value30
          key13: value23
          key17: value40
      podSelector:
        matchLabels:
          key36: value33
          key17: value40
